問題リストの表示を改善
